--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
+<div>
+  <span>时间选择:</span>
+  <jigsaw-range-time [(beginDate)]="beginDate" [(endDate)]="endDate"></jigsaw-range-time>
 </div>
 
