--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!--The whole content below can be removed with the new code.-->
 <div>
   <span>时间选择:</span>
-  <jigsaw-range-time [(beginDate)]="beginDate" [(endDate)]="endDate"></jigsaw-range-time>
+  <jigsaw-combo-select [(value)]="rangeTimeComboValue" openTrigger="click">
+    <jigsaw-range-time [(beginDate)]="beginDate" [(endDate)]="endDate" (change)="handleChange($event)"></jigsaw-range-time>
+  </jigsaw-combo-select>
 </div>
 
