--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,16 @@
   <jigsaw-combo-select [(value)]="rangeTimeComboValue" openTrigger="click">
     <jigsaw-range-time [(beginDate)]="beginDate" [(endDate)]="endDate" (change)="handleChange($event)"></jigsaw-range-time>
   </jigsaw-combo-select>
+  <jigsaw-checkbox [enableIndeterminate]="false" [(checked)]="status">多时段设置</jigsaw-checkbox>
+  <jigsaw-combo-select [(value)]="selectedPeriodTimes" openTrigger="click" [disabled]="!status">
+    <jigsaw-tile-select
+      [(selectedItems)]="selectedPeriodTimes"
+      labelField="label"
+      [searchable]="true"
+      [data]="periodTimes"
+      width="350px"
+      tileOptionWidth="100px">
+    </jigsaw-tile-select>
+  </jigsaw-combo-select>
 </div>
 
