--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<div>
+<div class="condition">
   <span>时间选择:</span>
   <jigsaw-combo-select [(value)]="rangeTimeComboValue" openTrigger="click">
     <jigsaw-range-time [(beginDate)]="beginDate" [(endDate)]="endDate" (change)="handleChange($event)"></jigsaw-range-time>
@@ -20,5 +20,50 @@
                       [data]="quickChoices"
                       trackItemBy="id" [(value)]="selectedChoice">
   </jigsaw-radio-group>
+  <br>
+  <span>业务类型:</span>
+  <jigsaw-combo-select [(value)]="selectBusinessType" openTrigger="click" width="400px">
+    <jigsaw-tile-select
+      [(selectedItems)]="selectBusinessType"
+      labelField="label"
+      [searchable]="true"
+      [data]="businessTypes"  [multipleSelect]="false"
+      width="350px"
+      tileOptionWidth="100px">
+    </jigsaw-tile-select>
+  </jigsaw-combo-select>
+
+  <span>接口：</span>
+  <jigsaw-combo-select [(value)]="selectInterface" openTrigger="click" width="400px">
+    <jigsaw-tile-select
+      [(selectedItems)]="selectInterface"
+      labelField="label"
+      [searchable]="true"
+      [data]="interfaces"
+      width="350px"
+      tileOptionWidth="100px">
+    </jigsaw-tile-select>
+  </jigsaw-combo-select>
+  <br>
+  <span>查询条件:</span>
+  <jigsaw-combo-select [(value)]="selectUserType" openTrigger="click" width="120px">
+    <jigsaw-tile-select
+      [(selectedItems)]="selectUserType"
+      labelField="label"
+      [searchable]="true"
+      [data]="userTypes" [multipleSelect]="false"
+      width="100px"
+      tileOptionWidth="100px">
+    </jigsaw-tile-select>
+  </jigsaw-combo-select>
+  <jigsaw-input [(value)]="userInfo" height="32px"></jigsaw-input>
+  <span style="margin-left:100px">显示方式：</span>
+  <jigsaw-radio-group (valueChange)="displayTypeChange($event)"
+                      [data]="displayTypes"
+                      trackItemBy="id" [(value)]="displayType">
+  </jigsaw-radio-group>
+  <span>最大查询记录数：</span>
+  <jigsaw-input [(value)]="maxRecord" height="32px"></jigsaw-input>
+  <jigsaw-button (click)="doSearch()">查询</jigsaw-button>
 </div>
 
