--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@rdkmaster/jigsaw/prebuilt-themes/zte.css";
+@import "~@rdkmaster/jigsaw/prebuilt-themes/zte.css";
+@import "~@rdkmaster/jigsaw/theming-api";
+
+//@include setTableBody(#333, 12px , red, blue );
+
