--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,6 @@
   display: flex;
   border-bottom: 2px solid #108ee9;
   padding-bottom: 5px;
-  line-height: 3.5;
   flex-wrap: wrap;
 }
 
@@ -11,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .vertically {
